--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Word Bank</title>
 </head>
 <body>
+<h2>单词</h2>
 <article>
 	<ul>
 		<li><a href="./prefix.html">前缀</a></li>
@@ -14,6 +15,12 @@
 		<li><a href="./stem.html">词根</a></li>
 	</ul>
 </article>
-
+<h2>短语</h2>
+<article>
+	<ul>
+		<li><a href="./phrase-work.html">工作相关短语</a></li>
+		<li><a href="./cosmetic.html">化妆品相关短语</a></li>
+	</ul>
+</article>
 </body>
 </html>
