--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 		<li><a href="javascript:void(0)" onclick="clickNode('phrase-cosmetic')">化妆品</a></li>
 	</ul>
 </article>
+<h2>日常</h2>
+<article>
+	<ul>
+		<li><a href="javascript:void(0)" onclick="clickNode('food')">食物</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('vegetables')">蔬菜</a></li>
+	</ul>
+</article>
 </div>
 <div class="right">
 <svg id="mindmap"></svg>
