fix: typo to fix phone style

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <h2>单词</h2>
 <article>
 	<ul>
-		<li><a href="javascript:void(0)" onclick="clickNode('prefix-prof')">前缀(专业)</a></li>
-		<li><a href="javascript:void(0)" onclick="clickNode('suffix-prof')">后缀(专业)</a></li>
-		<li><a href="javascript:void(0)" onclick="clickNode('stem-prof')">词根(专业)</a></li>
-		<li><a href="javascript:void(0)" onclick="clickNode('prefix')">前缀(普通)</a></li>
-		<li><a href="javascript:void(0)" onclick="clickNode('suffix')">后缀(普通)</a></li>
-		<li><a href="javascript:void(0)" onclick="clickNode('stem')">词根(普通)</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('prefix-prof')">前缀(专)</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('suffix-prof')">后缀(专)</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('stem-prof')">词根(专)</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('prefix')">前缀(普)</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('suffix')">后缀(普)</a></li>
+		<li><a href="javascript:void(0)" onclick="clickNode('stem')">词根(普)</a></li>
 	</ul>
 </article>
 <h2>短语</h2>
